<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LIL</string>
    <string name="more_info">More info   >></string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="go">Go</string>
    <string name="zoom">Zoom in</string>
    <string name="zoomout">Zoom out</string>
    <string name="maps">Maps</string>
    <string name="list">List</string>
    <string name="spots">Spots</string>
    <string name="preferences">Preferences</string>
    <string name="intro">Intro</string>
    <string name="about">About</string>

</resources>
