<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/goBack"
        android:title="@string/back"
        android:icon="@drawable/backmenuicon" />

    <item
        android:id="@+id/spots"
        android:title="@string/spots"
        android:icon="@drawable/eyemenuicon" />

    <item
        android:id="@+id/zoomout"
        android:title="@string/zoomout"
        android:icon="@drawable/ic_menu_zoom_out" />


    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/homemenuicon" />

    <item
        android:id="@+id/preferences"
        android:title="@string/preferences"
        android:icon="@android:drawable/ic_menu_preferences" />


    <item
        android:id="@+id/intro"
        android:title="@string/intro"
        android:icon="@android:drawable/ic_menu_help" />

    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:icon="@android:drawable/ic_menu_info_details" />

</menu>